--- a/css/main.css
+++ b/css/main.css
@@ -86,4 +86,9 @@ input[type="submit"] {
 }
 
 
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+  img {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
